# yumush

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
configs/: client_config.toml  server_config.example.toml
crates/client/: Cargo.toml
crates/client/src/: event.rs  gui.rs  lib.rs  main.rs  network.rs  request.rs
crates/client/src/gui/: chat.rs  login.rs  register.rs
crates/common/src/: community.rs  constant.rs  error.rs  event.rs  lib.rs  message.rs  network.rs  request.rs  response.rs  user.rs  utils.rs  validate.rs
crates/common/src/error/: community.rs  decode.rs  file_operation.rs  message.rs  network.rs  user.rs
crates/common/src/request/: community.rs  message.rs  user.rs  user_community.rs
crates/server/: Cargo.toml
crates/server/src/: authentication.rs  community.rs  database_.rs  error.rs  lib.rs  main.rs  message.rs  network.rs  request.rs  test.rs  user.rs  user_community.rs
crates/server/src/community/: database.rs
crates/server/src/error/: database.rs
crates/server/src/message/: database.rs
crates/server/src/user/: database.rs
crates/server/src/user_community/: database.rs
