[workspace]
resolver = "2"
members = ["crates/client", "crates/common", "crates/server"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = false
incremental = false

[workspace.dependencies]
common = { path = "crates/common" }
tokio = { version = "1.52.3", features = ["full"] }
bitcode = "0.6.9"
quinn = { version = "0.11.9", default-features = false, features = [
    "runtime-tokio",
] }
rustls = "0.23.40"
