[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true, features = ["client"] }
tokio.workspace = true
quinn = { workspace = true, features = ["rustls-ring", "platform-verifier"] }

gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
