[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
default = ["rcgen"]
rcgen = ["dep:rcgen"]

[dev-dependencies]
tempfile = "3.27.0"

[dependencies]
common = { workspace = true, features = ["server"] }
rcgen = { version = "0.14.8", optional = true }
tokio.workspace = true
quinn = { workspace = true, features = ["rustls-aws-lc-rs"] }
bitcode.workspace = true
rustls.workspace = true

surrealdb = { version = "3.1.3", default-features = false, features = [
    "protocol-ws",
    "rustls",
    "kv-surrealkv",
] }
ulid = "1.2.1"
